[gd_scene load_steps=9 format=2]

[ext_resource path="res://baybie.png" type="Texture" id=1]
[ext_resource path="res://gun.png" type="Texture" id=2]
[ext_resource path="res://bighand.png" type="Texture" id=3]
[ext_resource path="res://Baybie.gd" type="Script" id=4]
[ext_resource path="res://whip.wav" type="AudioStream" id=5]
[ext_resource path="res://pop.wav" type="AudioStream" id=6]
[ext_resource path="res://gunGet.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 12 )

[node name="Baybie" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Whip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="GunGet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Poof" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
